Add security improvements: environment config, security headers, and documentation

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "helmet": "^8.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
@@ -71,13 +72,16 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": ["ts-jest", {
-        "isolatedModules": true,
-        "diagnostics": false,
-        "astTransformers": {
-          "before": []
+      "^.+\\.(t|j)s$": [
+        "ts-jest",
+        {
+          "isolatedModules": true,
+          "diagnostics": false,
+          "astTransformers": {
+            "before": []
+          }
         }
-      }]
+      ]
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
